# ddd-sample

./: README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: python-package.yml
features/: account.feature  currency.feature
features/steps/: account.py  currency.py  hello.py  pyproject.toml
src/ddd_sample/: __init__.py
src/ddd_sample/domain/: account.py  currency.py
