[project]
name = "ddd-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tyler Grunenwald", email = "tgrunenwald@punchthrough.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ddd-sample = "ddd_sample:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]

[tool.uv.workspace]
members = ["features/steps"]
